--- a/index.html
+++ b/index.html
@@ -2,89 +2,39 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8" />
-<title>Pastel 3D con Ciudad</title>
+<title>Pastel 3D</title>
+
 <style>
-  body { margin: 0; overflow: hidden; background: #111; }
-  #loading { position: absolute; top: 20px; left: 20px; color: white; font-size: 20px; }
+  body {
+    margin: 0;
+    overflow: hidden;
+    background: #87CEEB;
+  }
+  #loading {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-family: Arial;
+    font-size: 20px;
+    color: white;
+  }
 </style>
+
+<!-- Three.js desde CDN -->
+<script type="module">
+  import * as THREE from "https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.module.js";
+  import { OrbitControls } from "https://cdn.jsdelivr.net/npm/three@0.160.0/examples/jsm/controls/OrbitControls.js";
+  import { GLTFLoader } from "https://cdn.jsdelivr.net/npm/three@0.160.0/examples/jsm/loaders/GLTFLoader.js";
+
+  window.THREE = THREE;
+  window.OrbitControls = OrbitControls;
+  window.GLTFLoader = GLTFLoader;
+</script>
+
+<script src="main.js" type="module"></script>
+
 </head>
 <body>
 <div id="loading">Cargando pastel...</div>
-
-<script type="module">
-import * as THREE from "https://cdn.jsdelivr.net/npm/three@0.150.0/build/three.module.js";
-import { GLTFLoader } from "https://cdn.jsdelivr.net/npm/three@0.150.0/examples/jsm/loaders/GLTFLoader.js";
-import { OrbitControls } from "https://cdn.jsdelivr.net/npm/three@0.150.0/examples/jsm/controls/OrbitControls.js";
-
-let scene = new THREE.Scene();
-scene.background = new THREE.Color(0x87CEEB);
-
-let camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-camera.position.set(0, 2, 6);
-
-let renderer = new THREE.WebGLRenderer({ antialias: true });
-renderer.setSize(window.innerWidth, window.innerHeight);
-document.body.appendChild(renderer.domElement);
-
-// Luces
-const hemi = new THREE.HemisphereLight(0xffffff, 0x444444, 2);
-scene.add(hemi);
-
-const dir = new THREE.DirectionalLight(0xffffff, 2);
-dir.position.set(5, 10, 5);
-scene.add(dir);
-
-// Controles
-const controls = new OrbitControls(camera, renderer.domElement);
-
-// CIUDAD (edificios genéricos)
-function crearCiudad() {
-  const edificioGeo = new THREE.BoxGeometry(1, 1, 1);
-  for (let i = 0; i < 120; i++) {
-    const material = new THREE.MeshStandardMaterial({
-      color: new THREE.Color("hsl(" + (Math.random() * 360) + ", 30%, 60%)")
-    });
-    const edificio = new THREE.Mesh(edificioGeo, material);
-    edificio.scale.y = Math.random() * 5 + 1;
-    edificio.position.x = (Math.random() - 0.5) * 30;
-    edificio.position.z = (Math.random() - 0.5) * 30;
-    edificio.position.y = edificio.scale.y / 2;
-    scene.add(edificio);
-  }
-}
-crearCiudad();
-
-// Cargar pastel
-const loader = new GLTFLoader();
-loader.load(
-  "./pastel.glb",
-  gltf => {
-    document.getElementById("loading").remove();
-    let model = gltf.scene;
-    model.position.set(0, 0, 0);
-    model.scale.set(1.5, 1.5, 1.5);
-    scene.add(model);
-    animate();
-  },
-  xhr => {
-    let pct = (xhr.loaded / xhr.total) * 100;
-    document.getElementById("loading").textContent =
-      "Cargando pastel... " + pct.toFixed(0) + "%";
-  },
-  err => console.error("Error cargando modelo:", err)
-);
-
-function animate() {
-  requestAnimationFrame(animate);
-  controls.update();
-  renderer.render(scene, camera);
-}
-
-window.addEventListener("resize", () => {
-  camera.aspect = window.innerWidth / window.innerHeight;
-  camera.updateProjectionMatrix();
-  renderer.setSize(window.innerWidth, window.innerHeight);
-});
-</script>
 </body>
 </html>
