--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Pastel 3D</title>
-</head>
-<body>
-  <canvas id="c"></canvas>
-  <script type="module" src="main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Pastel 3D</title>
+  </head>
+  <body>
+    <script type="module" src="./main.js"></script>
+  </body>
 </html>
