--- a/index.html
+++ b/index.html
@@ -1,16 +1,71 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Pastel 3D</title>
-<style>
-body,html { margin:0; padding:0; overflow:hidden; background:#111; }
-#loading { position: fixed; top: 20px; left: 20px; color: white; font-size: 20px; }
-</style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pastel 3D</title>
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+            background: #f8e0f2;
+            font-family: Arial, sans-serif;
+        }
+        #loading {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 22px;
+            color: #333;
+        }
+    </style>
 </head>
 <body>
-<div id="loading">Cargando pastel...</div>
-<script type="module" src="./main.js"></script>
+    <div id="loading">Cargando pastel...</div>
+
+    <script type="module">
+        import * as THREE from "https://unpkg.com/three@0.152.2/build/three.module.js";
+        import { OrbitControls } from "https://unpkg.com/three@0.152.2/examples/jsm/controls/OrbitControls.js";
+
+        const scene = new THREE.Scene();
+        scene.background = new THREE.Color("#f8e0f2");
+
+        const camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
+        camera.position.set(3, 3, 5);
+
+        const renderer = new THREE.WebGLRenderer({ antialias: true });
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.body.appendChild(renderer.domElement);
+
+        const light = new THREE.DirectionalLight(0xffffff, 1);
+        light.position.set(5, 5, 5);
+        scene.add(light);
+
+        const ambient = new THREE.AmbientLight(0xffffff, 0.5);
+        scene.add(ambient);
+
+        const geometry = new THREE.CylinderGeometry(1.5, 1.5, 1, 32);
+        const material = new THREE.MeshStandardMaterial({ color: "pink" });
+        const cake = new THREE.Mesh(geometry, material);
+        scene.add(cake);
+
+        const controls = new OrbitControls(camera, renderer.domElement);
+
+        document.getElementById("loading").style.display = "none";
+
+        function animate() {
+            requestAnimationFrame(animate);
+            cake.rotation.y += 0.01;
+            renderer.render(scene, camera);
+        }
+        animate();
+
+        window.addEventListener("resize", () => {
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+        });
+    </script>
 </body>
 </html>
