--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
     <script type="module">
         import * as THREE from "https://unpkg.com/three@0.152.2/build/three.module.js";
         import { OrbitControls } from "https://unpkg.com/three@0.152.2/examples/jsm/controls/OrbitControls.js";
+        import { GLTFLoader } from "https://unpkg.com/three@0.152.2/examples/jsm/loaders/GLTFLoader.js";
 
         const scene = new THREE.Scene();
         scene.background = new THREE.Color("#f8e0f2");
 
-        const camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
+        const camera = new THREE.PerspectiveCamera(
+            60,
+            window.innerWidth / window.innerHeight,
+            0.1,
+            1000
+        );
         camera.position.set(3, 3, 5);
 
         const renderer = new THREE.WebGLRenderer({ antialias: true });
@@ -45,18 +51,30 @@
         const ambient = new THREE.AmbientLight(0xffffff, 0.5);
         scene.add(ambient);
 
-        const geometry = new THREE.CylinderGeometry(1.5, 1.5, 1, 32);
-        const material = new THREE.MeshStandardMaterial({ color: "pink" });
-        const cake = new THREE.Mesh(geometry, material);
-        scene.add(cake);
+        // Cargar modelo GLB
+        const loader = new GLTFLoader();
+        loader.load(
+            "pastel.glb",
+            function (gltf) {
+                const model = gltf.scene;
+                model.position.set(0, 0, 0);
+                model.scale.set(1.5, 1.5, 1.5);
+                scene.add(model);
+
+                document.getElementById("loading").style.display = "none";
+            },
+            function () {},
+            function (error) {
+                console.error("Error cargando modelo:", error);
+            }
+        );
 
         const controls = new OrbitControls(camera, renderer.domElement);
-
-        document.getElementById("loading").style.display = "none";
+        controls.enableDamping = true;
 
         function animate() {
             requestAnimationFrame(animate);
-            cake.rotation.y += 0.01;
+            controls.update();
             renderer.render(scene, camera);
         }
         animate();
@@ -69,4 +87,3 @@
     </script>
 </body>
 </html>
-
